# Human-Tracker-RGBD

./: .gitignore  README.md
fuzzyHRI3/: imagecomposer.h  main.cpp  makefile
fuzzyHRI3/cosas/: gucolor.cpp
fuzzyHRI3/modelos/: RAM.fis  allDBsPGM.svm.range
viola/: BoostSerializers.h  CImageParticleFilter.cpp  CImageParticleFilter.h  CMakeLists.txt  CObservationImageWithModel.cpp  CObservationImageWithModel.h  ColorModel.h  EllipseFunctions.h  EllipseStash.h  FacesDetection.cpp  FacesDetection.h  GeometryHelpers.h  ImageRegistration.cpp  ImageRegistration.h  Kinect2Camera.h  Kinect2Feed.h  Kinect2VideoReader.h  Kinect2VideoReplay.cpp  KinectCamera.cpp  KinectCamera.h  MiscHelpers.h  ModelParameters.h  MultiTracker.h  PersonMask.h  Protonect-depth-registration.cpp  SmileTest.cpp  StateEstimation.h  Tracker.h  color_model.h  driveGnuPlotStreams.pl  ellipse_functions.h  faces_detection.cpp  faces_detection.h  geometry_helpers.h  gnuplot.pl  hog.cpp  image_registration_example.cpp  kinect2_recorder.cpp  kinect_3d_view.cpp  kmeans.cpp  (+17 more)
viola/CMakeModules/: depth_registration.cmake  libusb_dep.cmake
viola/depends/glfw/lib/: libglfw.so.3.0
viola/depends/glfw/lib/cmake/glfw/: glfwConfig.cmake  glfwTargets-noconfig.cmake  glfwTargets.cmake
viola/depends/glfw/lib/pkgconfig/: glfw3.pc
viola/depends/libusb/lib/: libusb-1.0.so.0.1.0
viola/depends/libusb/lib/pkgconfig/: libusb-1.0.pc
viola/depth_registration/: CMakeLists.txt  CMakeLists.txt~
viola/depth_registration/src/: depth_registration_opencl.cpp
viola/fuzzyHRI3/: imagecomposer.cpp  main  main.cpp  main2.cpp  main3.cpp  makefile  smileestimator.cpp  smileestimator.h
viola/fuzzyHRI3/cosas/: guaviwrite.cpp
viola/fuzzyHRI3/modelos/: RAP.fis  allDBsPGM.svm.model  closefuzzy.fis  farfuzzy.fis
viola/misc-tests/: Boost-normal.cpp  CObservationImageWithModel.h  KinectCamera.cpp  calibration_pairs.cpp  image_registration_example.cpp  objectDetection2.cpp  particle_filter.cpp  peopledetect.cpp  squareDetection.cpp
